EmployeeTask is done for inheritance/encapsulation examples.